--- a/redux-toolkit/package.json
+++ b/redux-toolkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "journal-app",
+  "name": "redux-toolkit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,16 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.13",
     "@reduxjs/toolkit": "^1.9.0",
-    "firebase": "^9.14.0",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
